--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -2,34 +2,217 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 16%|█████▉                                | 21.7M/139M [00:03<00:17, 6.87MiB/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwhisper\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Load the Whisper model\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mwhisper\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_model\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbase\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Function to transcribe audio and save to text file\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtranscribe_audio_to_text\u001b[39m(audio_file_path, text_file_path):\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;66;03m# Transcribe the audio file\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\arvin\\anaconda3\\envs\\mnlp-a2\\lib\\site-packages\\whisper\\__init__.py:133\u001b[0m, in \u001b[0;36mload_model\u001b[1;34m(name, device, download_root, in_memory)\u001b[0m\n\u001b[0;32m    130\u001b[0m     download_root \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mXDG_CACHE_HOME\u001b[39m\u001b[38;5;124m\"\u001b[39m, default), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhisper\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    132\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m _MODELS:\n\u001b[1;32m--> 133\u001b[0m     checkpoint_file \u001b[38;5;241m=\u001b[39m \u001b[43m_download\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_MODELS\u001b[49m\u001b[43m[\u001b[49m\u001b[43mname\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdownload_root\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43min_memory\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    134\u001b[0m     alignment_heads \u001b[38;5;241m=\u001b[39m _ALIGNMENT_HEADS[name]\n\u001b[0;32m    135\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(name):\n",
-      "File \u001b[1;32mc:\\Users\\arvin\\anaconda3\\envs\\mnlp-a2\\lib\\site-packages\\whisper\\__init__.py:78\u001b[0m, in \u001b[0;36m_download\u001b[1;34m(url, root, in_memory)\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tqdm(\n\u001b[0;32m     71\u001b[0m     total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m(source\u001b[38;5;241m.\u001b[39minfo()\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mContent-Length\u001b[39m\u001b[38;5;124m\"\u001b[39m)),\n\u001b[0;32m     72\u001b[0m     ncols\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m80\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     75\u001b[0m     unit_divisor\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1024\u001b[39m,\n\u001b[0;32m     76\u001b[0m ) \u001b[38;5;28;01mas\u001b[39;00m loop:\n\u001b[0;32m     77\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m---> 78\u001b[0m         buffer \u001b[38;5;241m=\u001b[39m \u001b[43msource\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m8192\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     79\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m buffer:\n\u001b[0;32m     80\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\arvin\\anaconda3\\envs\\mnlp-a2\\lib\\http\\client.py:466\u001b[0m, in \u001b[0;36mHTTPResponse.read\u001b[1;34m(self, amt)\u001b[0m\n\u001b[0;32m    463\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlength \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m amt \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlength:\n\u001b[0;32m    464\u001b[0m     \u001b[38;5;66;03m# clip the read to the \"end of response\"\u001b[39;00m\n\u001b[0;32m    465\u001b[0m     amt \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlength\n\u001b[1;32m--> 466\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mamt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    467\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m s \u001b[38;5;129;01mand\u001b[39;00m amt:\n\u001b[0;32m    468\u001b[0m     \u001b[38;5;66;03m# Ideally, we would raise IncompleteRead if the content-length\u001b[39;00m\n\u001b[0;32m    469\u001b[0m     \u001b[38;5;66;03m# wasn't satisfied, but it might break compatibility.\u001b[39;00m\n\u001b[0;32m    470\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_close_conn()\n",
-      "File \u001b[1;32mc:\\Users\\arvin\\anaconda3\\envs\\mnlp-a2\\lib\\socket.py:705\u001b[0m, in \u001b[0;36mSocketIO.readinto\u001b[1;34m(self, b)\u001b[0m\n\u001b[0;32m    703\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m    704\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 705\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_sock\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrecv_into\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    706\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m timeout:\n\u001b[0;32m    707\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_timeout_occurred \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\arvin\\anaconda3\\envs\\mnlp-a2\\lib\\ssl.py:1274\u001b[0m, in \u001b[0;36mSSLSocket.recv_into\u001b[1;34m(self, buffer, nbytes, flags)\u001b[0m\n\u001b[0;32m   1270\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m flags \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m   1271\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   1272\u001b[0m           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnon-zero flags not allowed in calls to recv_into() on \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m\n\u001b[0;32m   1273\u001b[0m           \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m)\n\u001b[1;32m-> 1274\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnbytes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbuffer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1275\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1276\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39mrecv_into(buffer, nbytes, flags)\n",
-      "File \u001b[1;32mc:\\Users\\arvin\\anaconda3\\envs\\mnlp-a2\\lib\\ssl.py:1130\u001b[0m, in \u001b[0;36mSSLSocket.read\u001b[1;34m(self, len, buffer)\u001b[0m\n\u001b[0;32m   1128\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1129\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m buffer \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1130\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_sslobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbuffer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1131\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1132\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sslobj\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;28mlen\u001b[39m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "The question of the meaning of life is one of the most profound and debated topics in human history. It has been explored by philosophers, theologians, scientists, and countless individuals across cultures and time. There is no definitive answer, but here are some perspectives to consider:\n",
+      "\n",
+      "1. **Existentialism**: This philosophical perspective suggests that life has no inherent meaning. We must create our own purpose and give our lives meaning through our choices, actions, and relationships.\n",
+      "2. **Religious or Spiritual Beliefs**: Many people find meaning in their faith or spiritual practices. Their beliefs provide a framework for understanding the world, themselves, and their place in it.\n",
+      "3. **Personal Growth and Self-Actualization**: Some argue that life's meaning lies in realizing one's full potential, pursuing passions, and cultivating meaningful relationships.\n",
+      "4. **Biological Imperatives**: From a biological perspective, human beings have an innate drive to survive, reproduce, and perpetuate the species.\n",
+      "5. **Social and Cultural Context**: Our lives are shaped by societal norms, cultural values, and historical contexts. Meaning can be derived from our connections with others, community, or culture.\n",
+      "6. **Self-Discovery and Autonomy**: Some individuals find meaning in exploring their own identity, desires, and goals, exercising autonomy over their choices and decisions.\n",
+      "\n",
+      "Ultimately, the meaning of life is a deeply personal question that each person must answer for themselves. It may be shaped by a combination of factors, including:\n",
+      "\n",
+      "* Personal values and beliefs\n",
+      "* Cultural and societal influences\n",
+      "* Life experiences and challenges\n",
+      "* Philosophical or spiritual perspectives\n",
+      "\n",
+      "To find one's own meaning in life, consider asking yourself:\n",
+      "\n",
+      "* What brings me joy and fulfillment?\n",
+      "* What are my core values and passions?\n",
+      "* How do I want to live my life, and what kind of person do I aspire to be?\n",
+      "* What do I hope to achieve, and how can I make a positive impact on the world?\n",
+      "\n",
+      "The journey to discover the meaning of life is ongoing, and it may take time and exploration to find answers that resonate with you."
      ]
     }
    ],
+   "source": [
+    "import whisper\n",
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import ollama\n",
+    "from datetime import datetime\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Take an audio input "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recording...\n",
+      "Recording finished.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sounddevice as sd\n",
+    "import numpy as np\n",
+    "\n",
+    "import scipy.io.wavfile as wav\n",
+    "\n",
+    "# Parameters\n",
+    "duration = 10  # seconds\n",
+    "fs = 44100  # Sample rate\n",
+    "\n",
+    "print(\"Recording...\")\n",
+    "audio = sd.rec(int(duration * fs), samplerate=fs, channels=2, dtype='int16')\n",
+    "sd.wait()  # Wait until recording is finished\n",
+    "print(\"Recording finished.\")\n",
+    "\n",
+    "# Save the audio to a file\n",
+    "wav.write('audio/audio_input.wav', fs, audio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Then ranscribe it using whisper and then store the text file in the data folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:00.000 --> 00:06.620]  The main idea we'll have to solve is try and create a journal which is easy for people\n",
+      "[00:06.620 --> 00:09.260]  to maintain and interact with.\n",
+      "[00:09.260 --> 00:14.340]  One of the problems that people face with dealing with a big journal is trying to go\n",
+      "[00:14.340 --> 00:15.840]  through it again.\n",
+      "[00:15.840 --> 00:19.780]  Imagine that you have a book and then you've been writing it for a very long time.\n",
+      "[00:19.780 --> 00:23.020]  You do not have the time to go through it over and over again.\n",
+      "[00:23.020 --> 00:27.780]  You need something that has a semantic idea of what you were speaking about on a particular\n",
+      "[00:27.780 --> 00:28.780]  day.\n",
+      "[00:29.180 --> 00:36.020]  That is where AI comes in and it not only formats and curates your dataset and stores\n",
+      "[00:36.020 --> 00:38.300]  it in a vector database locally.\n",
+      "[00:38.300 --> 00:40.500]  You can also chat with it.\n",
+      "[00:40.500 --> 00:48.420]  This idea is very simple and the innovative aspect is the offline aspect which is completely\n",
+      "[00:48.420 --> 00:49.820]  on your device.\n",
+      "[00:49.820 --> 00:54.620]  It doesn't go anywhere, it doesn't leave your device and you don't have to worry about\n",
+      "[00:54.620 --> 00:55.620]  privacy.\n",
+      "--------------------------------------------------\n",
+      " The main idea we'll have to solve is try and create a journal which is easy for people to maintain and interact with. One of the problems that people face with dealing with a big journal is trying to go through it again. Imagine that you have a book and then you've been writing it for a very long time. You do not have the time to go through it over and over again. You need something that has a semantic idea of what you were speaking about on a particular day. That is where AI comes in and it not only formats and curates your dataset and stores it in a vector database locally. You can also chat with it. This idea is very simple and the innovative aspect is the offline aspect which is completely on your device. It doesn't go anywhere, it doesn't leave your device and you don't have to worry about privacy.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = whisper.load_model(\"base\")\n",
+    "\n",
+    "def get_transcribe(audio: str, language: str = 'en'):\n",
+    "    return model.transcribe(audio=audio, language=language, verbose=False)\n",
+    "\n",
+    "result = get_transcribe(audio='./audio/idea.m4a')\n",
+    "\n",
+    "print('-'*50)\n",
+    "print(result.get('text', ''))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LLM to format and answer any queries about your Journal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time: 2024-09-29 07:25:18\n",
+      "\n",
+      "\n",
+      "Summary: Creating an AI-powered journal for easy maintenance and interaction, utilizing semantic ideas and offline storage.\n",
+      "\n",
+      "Actual text:\n",
+      "The main idea we'll have to solve is try and create a journal which is easy for people to maintain and interact with. One of the problems that people face with dealing with a big journal is trying to go through it again. Imagine that you have a book and then you've been writing it for a very long time. You do not have the time to go through it over and over again. You need something that has a semantic idea of what you were speaking about on a particular day. That is where AI comes in and it not only formats and curates your dataset and stores it in a vector database locally. You can also chat with it. This idea is very simple and the innovative aspect is the offline aspect which is completely on your device. It doesn't go anywhere, it doesn't leave your device and you don't have to worry about privacy."
+     ]
+    }
+   ],
+   "source": [
+    "MODEL_NAME = \"llama3.2:3b-instruct-q5_0\"\n",
+    "\n",
+    "task = \"Format the followign text as follows, Summary : maximum 20 word summary, Actual text : actual input text : \" + text\n",
+    "\n",
+    "stream = ollama.chat(\n",
+    "    model=MODEL_NAME,\n",
+    "    messages=[{'role': 'user', 'content': task}],\n",
+    "    stream=True,\n",
+    ")\n",
+    "\n",
+    "date = datetime.now().strftime('%Y-%m-%d %H:%M:%S') \n",
+    "\n",
+    "full_output = \"Time: \" + date + \"\\n\\n\"\n",
+    "\n",
+    "print(full_output)\n",
+    "    \n",
+    "for chunk in stream:\n",
+    "  print(chunk['message']['content'], end='', flush=True)\n",
+    "  full_output += chunk['message']['content']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Store the text output into a text file in the text folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = datetime.now().strftime('%Y-%m-%d-%H-%M-%S')\n",
+    "# Store the full_output as a text file\n",
+    "with open(f'text/entry_{date}.txt', 'w') as file:\n",
+    "    file.write(full_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add the new text file to the vector database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
